{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 132,
  "lineage": "c8044a35-1f56-bbbf-27b4-f7b362f580c0",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "devops-igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:internet-gateway/igw-047246abee53f83f1",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-0d8dc549b8e3cd79b"
              }
            ],
            "id": "igw-047246abee53f83f1",
            "internet_gateway_id": "igw-047246abee53f83f1",
            "owner_id": "720247017352",
            "tags": {
              "Name": "internet-gateway"
            }
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "devops-subnet-private-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:subnet/subnet-0a8cc0ae87778adb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.5.0/24",
            "default_for_az": false,
            "id": "subnet-0a8cc0ae87778adb3",
            "map_public_ip_on_launch": false,
            "owner_id": "720247017352",
            "state": "available",
            "tags": {
              "Name": "Private subnet 1"
            },
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "devops-subnet-private-2c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:subnet/subnet-0d5ba879a0efc802a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.6.0/24",
            "default_for_az": false,
            "id": "subnet-0d5ba879a0efc802a",
            "map_public_ip_on_launch": false,
            "owner_id": "720247017352",
            "state": "available",
            "tags": {
              "Name": "Private subnet 2"
            },
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "devops-subnet-public-2a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:subnet/subnet-0837dbcd3e40fa9fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "default_for_az": false,
            "id": "subnet-0837dbcd3e40fa9fe",
            "map_public_ip_on_launch": true,
            "owner_id": "720247017352",
            "state": "available",
            "tags": {
              "Name": "public subnet 1"
            },
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_subnet",
      "name": "devops-subnet-public-2c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:subnet/subnet-095384cad2c0751f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.4.0/24",
            "default_for_az": false,
            "id": "subnet-095384cad2c0751f4",
            "map_public_ip_on_launch": true,
            "owner_id": "720247017352",
            "state": "available",
            "tags": {
              "Name": "Public subnet 2"
            },
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "devops-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:vpc/vpc-0d8dc549b8e3cd79b",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-039c7f101e619aaef",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-b76327dc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d8dc549b8e3cd79b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02c021fe5c08876ba",
            "owner_id": "720247017352",
            "state": "available",
            "tags": {
              "Name": "devops-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tf-alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:720247017352:loadbalancer/app/tf-ALB/bf183bf9f51b519f",
            "arn_suffix": "app/tf-ALB/bf183bf9f51b519f",
            "dns_name": "tf-ALB-1846416654.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-2:720247017352:loadbalancer/app/tf-ALB/bf183bf9f51b519f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-ALB",
            "security_groups": [
              "sg-0e4efcc816e35cc74"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a8cc0ae87778adb3"
              },
              {
                "subnet_id": "subnet-0d5ba879a0efc802a"
              }
            ],
            "subnets": [
              "subnet-0a8cc0ae87778adb3",
              "subnet-0d5ba879a0efc802a"
            ],
            "vpc_id": "vpc-0d8dc549b8e3cd79b",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "aws_security_group.sg-lb-back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:720247017352:listener/app/tf-ALB/bf183bf9f51b519f/d315210ba769ebaf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:720247017352:targetgroup/tf-20210803191009717100000001/ba16dcec35b04a82",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:720247017352:listener/app/tf-ALB/bf183bf9f51b519f/d315210ba769ebaf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:720247017352:loadbalancer/app/tf-ALB/bf183bf9f51b519f",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.tf-alb",
            "aws_lb_target_group.devops-target-group",
            "aws_security_group.sg-lb-back"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "devops-target-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:720247017352:targetgroup/tf-20210803191009717100000001/ba16dcec35b04a82",
            "arn_suffix": "targetgroup/tf-20210803191009717100000001/ba16dcec35b04a82",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:720247017352:targetgroup/tf-20210803191009717100000001/ba16dcec35b04a82",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-20210803191009717100000001",
            "port": 5000,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:security-group/sg-09a7e5c47a9b9bec6",
            "description": "Security group for the instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a7e5c47a9b9bec6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow traffic trough port 5000 from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20210803191009727900000003",
            "name_prefix": "",
            "owner_id": "720247017352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lb-back",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:720247017352:security-group/sg-0e4efcc816e35cc74",
            "description": "load balancer security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4efcc816e35cc74",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allowed traffic from anywhere",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "terraform-20210803191009717400000002",
            "name_prefix": "",
            "owner_id": "720247017352",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0d8dc549b8e3cd79b"
          }
        }
      ]
    }
  ]
}